fixing featurette images on mobile

--- a/css/ardanis.scss
+++ b/css/ardanis.scss
@@ -265,7 +265,7 @@ ul.list-social-icons li:hover a i {
     }
 
     .featurette-image {
-        max-width: 100%;
+        width: 100%;
     }
 
     .featurette-image.pull-left {
